# aics-sdai

./: .gitignore  README.md
NOTES/: AICS-SDAI.md
obsidian-notes/: AICS-SDAI.md
semester2/6_UX-Design-in-Smart-Applications/aics-ux-design/news-recommender-backend/: .env  alembic.ini  firebaseServiceAccountKey.json  pyproject.toml
semester2/6_UX-Design-in-Smart-Applications/aics-ux-design/news-recommender-backend/news_recommender_backend/: main_cli.py  main_server.py
semester2/6_UX-Design-in-Smart-Applications/aics-ux-design/news-recommender-backend/news_recommender_backend/alembic/: env.py
semester2/6_UX-Design-in-Smart-Applications/aics-ux-design/news-recommender-backend/news_recommender_backend/alembic/versions/: 2313c36d67d4_init.py  6b2a6ddea3bb_non_unique_username.py
semester2/6_UX-Design-in-Smart-Applications/aics-ux-design/news-recommender-backend/news_recommender_backend/api/: api.py
semester2/6_UX-Design-in-Smart-Applications/aics-ux-design/news-recommender-backend/news_recommender_backend/api/endpoint_account/: actions_account.py  dtos_account.py  endpoint_account.py
semester2/6_UX-Design-in-Smart-Applications/aics-ux-design/news-recommender-backend/news_recommender_backend/api/endpoint_auth/: actions_auth.py  endpoint_auth.py
semester2/6_UX-Design-in-Smart-Applications/aics-ux-design/news-recommender-backend/news_recommender_backend/api/endpoint_news/: actions_news.py  endpoint_news.py
semester2/6_UX-Design-in-Smart-Applications/aics-ux-design/news-recommender-backend/news_recommender_backend/cli/: cli.py  command_root.py
(+1227 files in other folders)
