[tool.poetry]
name = "news-recommender-backend"
version = "0.1.0"
description = ""
authors = ["ThanosApostolou <thanosapostolou@outlook.com>"]
readme = "../README.md"
packages = [{ include = "news_recommender_backend" }]

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
fastapi = { extras = ["all"], version = "0.101.1" }
numpy = "1.24.3"
pandas = "2.0.3"
matplotlib = "3.7.2"
scikit-learn = "1.3.0"
tensorflow = "2.14.0"
tensorflow-intel = { version = "2.14.0", platform = "win32" }
tensorflow-io-gcs-filesystem = [
    { version = "> 0.32.0", markers = "platform_system != 'Windows'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
sqlalchemy = "2.0.20"
pymysql = "1.1.0"
python-dotenv = "1.0.0"
cryptography = "41.0.3"
firebase-admin = "6.2.0"


[tool.poetry.group.dev.dependencies]
alembic = "1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
